Changelog for statusmessages

    (name of developer listed in brackets)

statusmessages 2.0.1 - Unreleased

    - Fixed a bug where statusmessages wouldn't show up for forms that used a
      traversed_to method to get to the next page. Thx to jlagarde for the fix.
      This closes http://dev.plone.org/plone/ticket/5766.
      [hannosch]

statusmessages 2.0 - Released May 15, 2006

    - Total reimplementation using cookies instead of a server-side in-memory
      storage to store status messages. The reasoning behind this change is that
      the former approach didn't play well with web caching strategies and added
      an additional burden in ZEO environments (having to use load-balancers,
      which are able to identify users and keep them connected to the same ZEO
      server).
      [hannosch]

statusmessages 1.1 - Released February 13, 2006

    - Added tests for ThreadSafeDict.
      [hannosch]

    - Fixed serious memory leak and did some code improvements.
      [hannosch] [alecm]

statusmessages 1.0 - Released January 26, 2006

    - Initial implementation
      [hannosch]
