@@ -2,15 +2,14 @@
     Status messages tests.
 """
 
-from unittest import TestSuite
+import unittest
 from zope.testing.doctestunit import DocTestSuite
 
 def test_suite():
-    return TestSuite((
+    return unittest.TestSuite((
         DocTestSuite('Products.statusmessages.adapter'),
         DocTestSuite('Products.statusmessages.message'),
         ))
 
 if __name__ == '__main__':
     unittest.main(defaultTest="test_suite")
-
